--- a/server/build.gradle
+++ b/server/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     /* Redis */
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    /* jasypt */
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 }
 
 tasks.named('test') {
