--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,7 +17,10 @@ repositories {
 
 dependencies {
     /* mariadb */
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    //runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+    /* mysql */
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     /* spring jpa data */
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
